common/cf-solana/src/snapshots/cf_solana__proto__client_state.snap
---
source: common/cf-solana/src/proto.rs
expression: any.value
---
[
    8,
    8,
    18,
    32,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    24,
    128,
    128,
    136,
    186,
    144,
    173,
    205,
    4,
]
