common/cf-solana/src/snapshots/cf_solana__proto__consensus_state.snap
---
source: common/cf-solana/src/proto.rs
expression: any.value
---
[
    10,
    32,
    0,
    0,
    0,
    42,
    0,
    0,
    0,
    42,
    0,
    0,
    0,
    42,
    0,
    0,
    0,
    42,
    0,
    0,
    0,
    42,
    0,
    0,
    0,
    42,
    0,
    0,
    0,
    42,
    0,
    0,
    0,
    42,
    16,
    1,
]
