common/cf-solana/src/snapshots/cf_solana__proto__header.snap
---
source: common/cf-solana/src/proto.rs
expression: any.value
---
[
    8,
    164,
    3,
    18,
    32,
    157,
    243,
    27,
    218,
    35,
    225,
    81,
    184,
    17,
    215,
    213,
    30,
    103,
    31,
    41,
    142,
    149,
    250,
    32,
    35,
    236,
    143,
    22,
    40,
    55,
    112,
    43,
    152,
    16,
    240,
    240,
    236,
    26,
    104,
    5,
    5,
    5,
    5,
    5,
    5,
    5,
    5,
    5,
    5,
    5,
    5,
    5,
    5,
    5,
    5,
    5,
    5,
    5,
    5,
    5,
    5,
    5,
    5,
    5,
    5,
    5,
    5,
    5,
    5,
    5,
    5,
    46,
    136,
    74,
    227,
    226,
    95,
    156,
    84,
    212,
    15,
    100,
    22,
    107,
    113,
    141,
    233,
    97,
    30,
    251,
    214,
    34,
    15,
    3,
    29,
    140,
    222,
    178,
    184,
    220,
    237,
    139,
    173,
    164,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
    34,
    81,
    42,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    0,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    10,
    10,
    10,
    10,
    10,
    10,
    10,
    10,
    10,
    10,
    10,
    10,
    10,
    10,
    10,
    10,
    10,
    10,
    10,
    10,
    10,
    10,
    10,
    10,
    10,
    10,
    10,
    10,
    10,
    10,
    10,
    10,
    42,
    66,
    1,
    18,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
    69,
]
